# qod-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  resume.docx  setup_coreweave.sh
qod/: base_data_types.py  chain_data_types.py  chat_session.py  display_msg.py  embeddings_data_types.py  langchain_wrappers.py  llm_data_types.py  server.py  summary_session.py
