[tool.poetry]
name = "qod-ai"
version = "0.1.0"
description = "AI over documents"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "*"}
gunicorn = "*"
pydantic = "*"
typer = "*"
uvicorn = { extras = ["standard"], version = "*" }


[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
ruff = "*"
pre-commit = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
